# Hold-the-Line

./: .gitignore  README.md  pyproject.toml
examples/: generate_maps.py  random_rollout.py  render_snapshot.py
instances/: test1.json  test2.json
src/: __init__.py  env.py  geometry.py  instance_loader.py  map_config.py  map_generator.py  policies.py  rendering.py  spaces.py  web_app.py
src/core/: env.py  geometry.py  instance_loader.py  instances.py  map_config.py  map_generator.py  rendering.py
src/policies/: __init__.py  base.py  random_policy.py
src/server/: app.py
tests/: test_env.py  test_env_smoke.py  test_instances.py  test_web_app.py
web/: app.js  index.html  styles.css
